# NewDimension

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.sh
include/config/: cmake_config.h  cmake_config.h.in  config.hpp
include/engine/: Camera.hpp  Color.hpp  Core.hpp  LightingPoint.hpp  Logger.hpp  Material.hpp  Renderer.hpp  Scene.hpp  TimeManager.hpp  Window.hpp
include/engine/math/: Ray.hpp  Rect.hpp  Vector2.hpp  Vector3.hpp  function.hpp
include/engine/shapes/: Sphere.hpp
src/: main.cpp
src/engine/: Camera.cpp  Core.cpp  Logger.cpp  Renderer.cpp  Scene.cpp  Window.cpp
